# ldp-intermedio

./: .gitignore  CMakeLists.txt  README.md  main
include/: Buffer.h  LidarDriver.h
input/: input.txt
scripts/: build.sh  buildandrun.sh  configure.sh  run.sh
src/: Buffer.cpp  LidarDriver.cpp  main.cpp
